fix: Remove whitespace below the current image

--- a/static/style.css
+++ b/static/style.css
@@ -57,6 +57,7 @@ body {
 
 .current-image {
     grid-area: current-image;
+    line-height: 0;
 }
 
 *:has(.current-image img) {
